# rust-grpc-app-template

./: Cargo.toml  README.md
api/grpc/: Cargo.toml  build.rs
api/grpc/src/: greeter.rs  lib.rs
api/grpc/src/proto/: greeter.proto
api/http/: Cargo.toml
api/http/src/: greeter.rs  lib.rs
cli/: Cargo.toml
cli/src/: main.rs
domain/: Cargo.toml
domain/src/: greeter.rs
