[workspace]
members = ["cli", "domain", "api/*"]
default-members = ["cli"]

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }

my_service_domain = { path = "domain" }
my_service_api_http = { path = "api/http" }
my_service_api_grpc = { path = "api/grpc" }
